charts/device-managment/test/deploy-ver1-nginx+service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    labels:
      env: prod
      app: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      project: nginx-test
  template:
    metadata:
      labels:
        project: nginx-test
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
          env:
            - name: ASPNETCORE_HTTP_PORTS
              value: "8080"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    env: prod
spec:
  selector:
    project: nginx-test
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type:
